[metadata]
# replace with your username:
name = pytest-chkwon
version = 0.0.1
author = Changhyun Kwon
author_email = chkwon@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chkwon/pytest
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy >= 1.13
    pulp >= 2.4
    